--- a/photos.html
+++ b/photos.html
@@ -25,22 +25,7 @@
     </main>
     <script src="photos.js"></script>
 </body>
-<script>
-    window.pAsyncInit = function() {
-        PDK.init({
-            appId: "5056103943636043675", // Change this
-            cookie: true
-        });
-    };
-
-    (function(d, s, id){
-        var js, pjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) {return;}
-        js = d.createElement(s); js.id = id;
-        js.src = "//assets.pinterest.com/sdk/sdk.js";
-        pjs.parentNode.insertBefore(js, pjs);
-    }(document, 'script', 'pinterest-jssdk'));
-</script>
+<script src="pinterestsdk.js"></script>
 </html>
 
 <!-- 9dfe02569d76260150a48243a71c4bad -->
