--- a/photos.html
+++ b/photos.html
@@ -25,7 +25,43 @@
     </main>
     <script src="photos.js"></script>
 </body>
-<script src="pinterestsdk.js"></script>
+<script>
+    window.pAsyncInit = function() {
+        PDK.init({
+            appId: "5056103943636043675", // Change this
+            cookie: true
+        });
+        
+        //get board info
+        var pins = [];
+        PDK.request('/v1/me/', function (response) {
+          if (!response || response.error) {
+            //alert('Error occurred');
+          } else {
+            console.log(JSON.stringify(response));
+              //  alert('success');
+                console.log(PDK.getSession().accessToken);
+
+                var yahoo = $( "#result" ).load( "https://api.pinterest.com/v1/me/?access_token="+PDK.getSession().accessToken+"&fields=counts" );
+                console.log(yahoo);
+                PDK.logout();
+          }
+        });
+
+        //end get board info
+        });
+        //end login
+    };
+
+    (function(d, s, id){
+        var js, pjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) {return;}
+        js = d.createElement(s); js.id = id;
+        js.src = "https://assets.pinterest.com/sdk/sdk.js";
+        pjs.parentNode.insertBefore(js, pjs);
+    }(document, 'script', 'pinterest-jssdk'));
+</script>
+
 </html>
 
 <!-- 9dfe02569d76260150a48243a71c4bad -->
