--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body onload="onLoad()">
     <span id="nav"></span>
     <main>
+        <h1>Locations</h1>
         <div id="locations">
             <p>
                 Type your radius (in miles) to receive a list of nearby electronics stores. Click on a store to receive
