potentially added inner html functionality

--- a/photos.html
+++ b/photos.html
@@ -23,6 +23,7 @@
             <button onclick="findPhotos()">&#128269;</button>
         </div>
         <div id="flikr"></div>
+        <table id="pinterest"></table>
     </main>
     <script src="photos.js"></script>
 </body>
