--- a/photos.html
+++ b/photos.html
@@ -22,7 +22,7 @@
             <input name="parameters" id="parameters" type="text">
             <button onclick="findPhotos()">&#128269;</button>
         </div>
-        <div id="flikr"></div>
+        <div id="flickr"></div>
         <table id="pinterest"></table>
     </main>
     <script src="photos.js"></script>
