--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="scripts.js"></script>
 </head>
 
-<body onload="onLoad()">
+<body onload="onPageLoad()">
     <span id="nav"></span>
     <main>
         <h1>Locations</h1>
