--- a/index.html
+++ b/index.html
@@ -18,16 +18,14 @@
                 Type your radius (in miles) to receive a list of nearby electronics stores. Click on a store to receive
                 driving directions from your location.
             </p>
-            <div id="geo-search">
+            <div class="search">
                 <label>Radius</label>
                 <input name="radius" id="radius" type="text">
                 <button onclick="getLocation()">&#128269;</button>
             </div>
             <table id="storeList">
             </table>
-            <ul id="directionsList">
-
-            </ul>
+            <ul id="directionsList"></ul>
         </div>
         <div id="map"></div>
     </main>
