--- a/interests.html
+++ b/interests.html
@@ -17,7 +17,7 @@
             Input your parameters to receive see relevant interests from Flickr,
             as well as a list of Pinterest boards.
         </p>
-        <div id="photo-search">
+        <div class="search">
             <label>Parameters</label>
             <input name="parameters" id="parameters" type="text">
             <button onclick="findInterests()">&#128269;</button>
