--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="geolocator.css">
-    <script src="scripts.js"></script>
 </head>
 
-<body onload="onPageLoad()">
+<body onload="onLoad()">
     <span id="nav"></span>
     <main>
         <h1>Locations</h1>
