--- a/interests.html
+++ b/interests.html
@@ -11,7 +11,7 @@
 <body onload="onLoad()">
     <span id="nav"></span>
     <main>
-        <h1>Interests</h1>
+        <h1>Gallery</h1>
         <p>
             Input your parameters to receive see relevant interests from Flickr,
             as well as a list of Pinterest boards.
